k8s/service-mesh/linkerd/curl-test-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-bff-allowed-curl
  namespace: yas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-bff-allowed-curl
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: backoffice-bff-allowed-curl
    spec:
      serviceAccountName: backoffice-bff-allowed-curl
      containers:
        - name: curl
          image: curlimages/curl:8.11.1
          imagePullPolicy: IfNotPresent
          command: ["sleep", "3600"]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-bff-denied-curl
  namespace: yas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-bff-denied-curl
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: backoffice-bff-denied-curl
    spec:
      serviceAccountName: backoffice-bff-denied-curl
      containers:
        - name: curl
          image: curlimages/curl:8.11.1
          imagePullPolicy: IfNotPresent
          command: ["sleep", "3600"]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
